@@ -46,6 +46,8 @@ Version 6
 
 --Fixed so that animals can never step onto the welcome mat spot.
 
+--[Live server fix, May 9, 2013]  Now saves separate, pristine copy of house maps to go along with self-test move list, even after main house map has been changed by robbery.
+
 
 
 
